syntax = "proto3";

package com.gotocompany.depot;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

message TestFields {
  bytes bytes_field = 1;
  string string_field = 2;
  TestEnum enum_field = 3;
  double double_field = 4;
  float float_field = 5;
  bool bool_field = 6;
  int64 int64_field = 7;
  uint64 uint64_field = 8;
  int32 int32_field = 9;
  uint32 uint32_field = 10;
  fixed64 fixed64_field = 11;
  fixed32 fixed32_field = 12;
  sfixed32 sfixed32_field = 13;
  sfixed64 sfixed64_field = 14;
  sint32 sint32_field = 15;
  sint64 sint64_field = 16;
}

message TestFieldsRepeated {
  repeated bytes bytes_fields = 1;
  repeated string string_fields = 2;
  repeated TestEnum enum_fields = 3;
  repeated double double_fields = 4;
  repeated float float_fields = 5;
  repeated bool bool_fields = 6;
  repeated int64 int64_fields = 7;
  repeated uint64 uint64_fields = 8;
  repeated int32 int32_fields = 9;
  repeated uint32 uint32_fields = 10;
  repeated fixed64 fixed64_fields = 11;
  repeated fixed32 fixed32_fields = 12;
  repeated sfixed32 sfixed32_fields = 13;
  repeated sfixed64 sfixed64_fields = 14;
  repeated sint32 sint32_fields = 15;
  repeated sint64 sint64_fields = 16;
}

message TestRoot {
  string string_field = 1;
  TestInner inner_field = 2;
  repeated TestInner inner_list_field = 3;
  google.protobuf.Timestamp timestamp_field = 4;
  google.protobuf.Struct struct_field = 5;
  google.protobuf.Duration duration_field = 6;
  google.protobuf.Empty empty_field = 7;
}

message TestRootRepeated {
  repeated string string_fields = 1;
  repeated TestInner inner_fields = 2;
  repeated TestInner inner_list_fields = 3;
  repeated google.protobuf.Timestamp timestamp_fields = 4;
  repeated google.protobuf.Struct struct_fields = 5;
  repeated google.protobuf.Duration duration_fields = 6;
  repeated google.protobuf.Empty empty_fields = 7;
}

message TestInner {
  string string_field = 1;
  TestAnotherInner another_inner_field = 2;
  repeated TestAnotherInner another_inner_list_field = 3;
}

message TestAnotherInner {
  string string_field = 1;
}

message TestBuyerWrapper {
  TestBuyer buyer = 1;
}

message TestBuyer {
  string name = 1;
  TestCart cart = 2;
  google.protobuf.Timestamp created_at = 3;
}

message TestCart {
  string cart_id = 1;
  repeated TestItem items = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Duration cart_age = 4;
}

message TestItem {
  string id = 1;
  int32 quantity = 2;
}
enum TestEnum {
  TEST_1 = 0;
  TEST_2 = 1;
}


